--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,12 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <form method="post" action="/login">
+      <label for="username">username: </label>
+      <input type="text" name="username">
+      <label for="password">password: </label>
+      <input type="text" name="password">
+      <button type="submit">Log In</button>
+    </form>
   </body>
 </html>
