--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,12 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <form action = "/login" method="post">
+      <p><label for="username">Username: </label></p>
+      <p><input type = "text" name ="username" id ="username"></p>
+      <p><label for="password">Password: </label></p>
+      <p><input type = "password" name ="password" id ="password"></p>
+      <p><input type="submit" value="Log In" id="submit"></p>
+    </form>
   </body>
 </html>
