--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,16 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <form action="/login" method="post">
+      <p>
+      <label for="username">User Name</label>
+      <input type="text" name="username">
+      <p>
+      <label for="password">Password</label>
+      <input type="text" name="password">
+      </p>
+      <input type="submit" value="submit">      
+      </p>
+    </form>
   </body>
 </html>
