--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,17 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
+    <form method="post" action="/login">
+        <label for="username">Username: </label>
+        <input id="username" type="text" name="username">
+ail">
+
+        <label for="password">Password: </label>
+        <input id="password" type="text" name="password">
+
+        <input type="submit" value="Log In">
+
+    </form>
 
   </body>
 </html>
