--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
-  </head>
-  <body id="page-top">
-    
+<a class='btn btn-warning' href="/logout">Log Out</a>
 
-  </body>
-</html>
+<h1>Welcome <%= @user.username %></h1>
+
+<h3>Your Balance: <%=@user.balance%></h3>
