--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
-  </head>
-  <body id="page-top">
+
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
 
-  </body>
-</html>
+<form action="/login" method="post">
+  <label for="username">Username: <input type="text" name="username" id="username"></label>
+  <br>
+  <label for="password">Password: <input type="password" name="password" id="password"></label>
+  <br>
+  <input class='btn btn-success' type="submit" value="Log In">
+</form>
