--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,6 +7,11 @@
   </head>
   <body id="page-top">
     
-
+    <% if Helpers.is_logged_in?(session) %>
+      <h1>Welcome <%= Helpers.current_user(session).username %></h1>
+      <h3>Your Balance: <%= Helpers.current_user(session).balance %></h3>
+    
+      <h4><a href="/logout">Log Out</a></h4>
+    <% end %>
   </body>
 </html>
