--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,11 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
+    <form method="POST" action="/login">
+    <h2>Username: <input id="username" type="text" name="username"></h2>
+    <h2>Password: <input id="password" type="text" name="password"></h2>
+    <input type="submit" value="Log in">
+    </form>
 
   </body>
 </html>
